--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 <li class="nav__item"><a href=".skills" class="nav__link">skills</a></li>
                 <li class="nav__item"><a href=".education" class="nav__link">education</a></li>
                 <li class="nav__item"><a href=".portfolio" class="nav__link">portfolio</a></li>
-                <li class="nav__item"><a href=".interest" class="nav__link">interest</a></li>
             </ul>
         </nav>
         <nav class="header__nav--desktop">
@@ -43,7 +42,6 @@
                 <li class="nav__item--desktop"><a href=".skills" class="nav__link--desktop">skills</a></li>
                 <li class="nav__item--desktop"><a href=".education" class="nav__link--desktop">education</a></li>
                 <li class="nav__item--desktop"><a href=".portfolio" class="nav__link--desktop">portfolio</a></li>
-                <li class="nav__item--desktop"><a href=".interest" class="nav__link--desktop">interest</a></li>
             </ul>
         </nav>
     </div>
@@ -198,7 +196,7 @@
         <h2 class="header__second header__second--portfolio animated hidden" >the <span class="header--bold">portfolio</span></h2>
         <div class="masonry-grid">
             
-            <div class="portfolio__item portfolio__item--item1 portfolio__item--width2 animated hidden">
+            <div class="portfolio__item portfolio__item--item1 portfolio__item--width2 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">Build business</h3>
                     <a href="https://github.com/SviatoslavK/GoIT_JS_19-20" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
@@ -210,7 +208,7 @@
                 </div>
                 <img src="img/background/builds.png" alt="." class="portfolio__img">
             </div>
-            <div class="portfolio__item portfolio__item--item2 animated hidden">
+            <div class="portfolio__item portfolio__item--item2 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">Pingbuller</h3>
                     <a href="https://github.com/SviatoslavK/GoIt-HW-7" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
@@ -222,7 +220,7 @@
                 </div>
                 <img src="img/background/pingbuller.jpg" alt="." class="portfolio__img">
             </div>
-            <div class="portfolio__item portfolio__item--item3 portfolio__item--width2 animated hidden">
+            <div class="portfolio__item portfolio__item--item3 portfolio__item--width2 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">find partner</h3>
                     <a href="https://github.com/SviatoslavK/GoIT_Final" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
@@ -234,7 +232,7 @@
                 </div>
                 <img src="img/background/holiday.png" alt="." class="portfolio__img">
             </div>
-            <div class="portfolio__item portfolio__item--item4 animated hidden">
+            <div class="portfolio__item portfolio__item--item4 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">natural charm</h3>
                     <a href="https://github.com/SviatoslavK/NaturalCharm" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
@@ -246,7 +244,7 @@
                 </div>
                 <img src="img/background/natural.jpg" alt="." class="portfolio__img">
             </div>
-            <div class="portfolio__item portfolio__item--item5 animated hidden">
+            <div class="portfolio__item portfolio__item--item5 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">GoIT Team</h3>
                     <a href="" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
@@ -258,7 +256,7 @@
                 </div>
                 <img src="img/background/team.jpg" alt="." class="portfolio__img">
             </div>
-            <div class="portfolio__item portfolio__item--item6 animated hidden">
+            <div class="portfolio__item portfolio__item--item6 ">
                 <div class="portfolio__overlay">
                     <h3 class="overlay__name--portfolio animated hidden">MVC ToDo</h3>
                     <a href="https://github.com/SviatoslavK/GoIT_JS_23-24" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
