--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <a href="https://github.com/SviatoslavK/NaturalCharm" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/natural/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/NaturalCharm/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
