--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <a href="https://github.com/SviatoslavK/GoIT_JS_19-20" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/build-business/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/GoIT_JS_19-20/build/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -214,7 +214,7 @@
                     <a href="https://github.com/SviatoslavK/GoIt-HW-7" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/pingbuller/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/GoIt-HW-7/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -226,7 +226,7 @@
                     <a href="https://github.com/SviatoslavK/GoIT_Final" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/search-partner/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/GoIT_Final/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
@@ -262,7 +262,7 @@
                     <a href="https://github.com/SviatoslavK/GoIT_JS_23-24" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/todo/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/ToDo-App/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
