--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <a href="https://github.com/SviatoslavK/GoIT_Final" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="https://sviatoslavk.github.io/GoIT_Final/" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="https://sviatoslavk.github.io/GoIT_Final/build" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
