--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/builds.png" alt="." class="portfolio__img">
+                <img src="build/img/background/builds.png" alt="." class="portfolio__img">
             </div>
             <div class="portfolio__item portfolio__item--item2 ">
                 <div class="portfolio__overlay">
@@ -218,7 +218,7 @@
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/pingbuller.jpg" alt="." class="portfolio__img">
+                <img src="build/img/background/pingbuller.jpg" alt="." class="portfolio__img">
             </div>
             <div class="portfolio__item portfolio__item--item3 portfolio__item--width2 ">
                 <div class="portfolio__overlay">
@@ -230,7 +230,7 @@
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/holiday.png" alt="." class="portfolio__img">
+                <img src="build/img/background/holiday.png" alt="." class="portfolio__img">
             </div>
             <div class="portfolio__item portfolio__item--item4 ">
                 <div class="portfolio__overlay">
@@ -242,7 +242,7 @@
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/natural.jpg" alt="." class="portfolio__img">
+                <img src="build/img/background/natural.jpg" alt="." class="portfolio__img">
             </div>
             <div class="portfolio__item portfolio__item--item5 ">
                 <div class="portfolio__overlay">
@@ -250,11 +250,11 @@
                     <a href="" class="overlay__link overlay__link--code animated hidden tooltip-up" target="_blank" data-tooltip="View code on GitHub">
                         <i class="fa fa-code icon--big" aria-hidden="true"></i>
                     </a>
-                    <a href="project/goit/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
+                    <a href="build/project/goit/index.html" class="overlay__link overlay__link--view animated hidden delay-02s tooltip-right" target="_blank" data-tooltip="View web page">
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/team.jpg" alt="." class="portfolio__img">
+                <img src="build/img/background/team.jpg" alt="." class="portfolio__img">
             </div>
             <div class="portfolio__item portfolio__item--item6 ">
                 <div class="portfolio__overlay">
@@ -266,7 +266,7 @@
                         <i class="fa fa-link icon--big" aria-hidden="true"></i>
                     </a>
                 </div>
-                <img src="img/background/todo.jpg" alt="." class="portfolio__img">
+                <img src="build/img/background/todo.jpg" alt="." class="portfolio__img">
             </div>
         </div>
     </div>
